--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ menuorder: 1
                 <li class="montage layer" data-depth="0.25"><img src="{{ "/img/all-the-things.jpg" | prepend: site.baseurl }}" alt="" /></li>
               </ul>
               <div id="history-text">
-                <h3><span class="hidden">15 </span>years of history</h3>
-                <a href="#" class="text-orange lowercase">Scroll through our timeline</a>
+                <h3><span class="hidden">15 </span>years</h3>
               </div>
             </div> <!-- .col-half -->
             <div id="work-panel-content" class="col col-half">
@@ -113,11 +112,11 @@ menuorder: 1
         <div class="faux-table-cell">
           <h2 class="lowercase underline-orange">Cost and Value</h2>
           <div class="cols-wrap">
-            <div class="col col-half text-size-24">
+            <div class="col col-half middle text-size-24">
               <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value. Typical projects run from a few months to a year or more, with budgets from $50k to over $1 million.</p>
               <p>Custom software development is a big investment. We'll help you mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
             </div>
-            <div class="col col-half">
+            <div class="col col-half middle">
               <div class="value-wheel-wrap">
                 <img class="value-wheel" src="{{ "/img/value-wheel.jpg" | prepend: site.baseurl }}" alt="" />
                 <div class="value-text">
