--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -32,13 +32,13 @@ menuorder: 2
       </div> <!-- .case-study-item -->
 
       <div class="case-study-item clearfix">
-        <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" />
+        <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
-            <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
+            <h2 class="item-main-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
           </div>
           <div class="item-text-body">
             <div class="item-icons">
@@ -46,7 +46,7 @@ menuorder: 2
               <i class="icon icon-mobile"></i>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+            <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
