--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ menuorder: 1
               <p>Custom software development is a big investment. We'll help you mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
             </div>
             <div class="col col-half middle">
-              <div class="value-wheel-wrap">
+              <div class="value-wheel-wrap levitate">
                 <img class="value-wheel" src="{{ "/img/value-wheel.jpg" | prepend: site.baseurl }}" alt="" />
                 <div class="value-text">
                   <div class="text-segment text-segment-1">
@@ -142,6 +142,9 @@ menuorder: 1
                   </div> <!-- .text-segment-5 -->
                 </div> <!-- .value-text -->
               </div> <!-- .value-wheel-wrap -->
+              <div>
+                <img src="/img/wheel-shadow.png" width="425" class="wheel-shadow">
+              </div>
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
