finished layout/css for case studies landing page

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -6,12 +6,12 @@ menuorder: 2
 ---
 <div id="main-wrap" class="internal-page">
 
-  <div class="max-1200 align-center clearfix">
+  <div class="max-1000 align-center clearfix">
     <h1 class="lowercase underline-orange">Case Studies</h1>
 
     <div class="case-study-items">
 
-      <div class="case-study-item clearfix">
+      <div id="csi-cruisy" class="case-study-item clearfix">
         <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" />
         </a>
@@ -31,7 +31,7 @@ menuorder: 2
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
 
-      <div class="case-study-item clearfix">
+      <div id="csi-tfc" class="case-study-item clearfix">
         <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" />
         </a>
