--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -51,6 +51,82 @@ menuorder: 2
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
 
+      <div id="csi-forward-works" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div id="csi-appraisal-connector" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div id="csi-tmp" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div id="csi-llur" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Listed Land Use Register</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
     </div> <!-- .case-study-items -->
 
   </div> <!-- .max-1200 -->
