--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -4,7 +4,7 @@ title: Media Suite | Case Studies
 menutitle: Case studies
 menuorder: 2
 ---
-<div id="main-wrap" class="internal-page">
+<div id="main-wrap" class="internal-page case-studies-landing">
 
   <div class="max-1000 align-center clearfix">
     <h1 class="lowercase underline-orange">Case Studies</h1>
