--- a/case-studies/listed-land-use-register/index.html
+++ b/case-studies/listed-land-use-register/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Case Studies | Transport for Christchurch
+title: Case Studies | Listed Land Use Register
 ---
 <div id="main-wrap" class="internal-page">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Case Study: Transport for Christchurch</h1>
+    <h1 class="lowercase underline-orange">Case Study: Listed Land Use Register</h1>
 
   </div> <!-- .max-1200 -->
 
