--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -17,7 +17,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough Cruise Guide</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough Cruise Guide</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
           </div>
           <div class="item-text-body">
@@ -37,7 +37,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
           </div>
           <div class="item-text-body">
@@ -57,7 +57,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3>
           </div>
           <div class="item-text-body">
@@ -76,7 +76,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3>
           </div>
           <div class="item-text-body">
@@ -95,7 +95,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3>
           </div>
           <div class="item-text-body">
@@ -114,7 +114,7 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Listed Land Use Register</a></h2>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Listed Land Use Register</a></h2>
             <h3 class="item-sub-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
           </div>
           <div class="item-text-body">
