--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -70,9 +70,77 @@ title: Case Studies | TMP for Christchurch
 
     <div class="other-case-studies max-760">
 
-      <div class="case-study-item">
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough Cruise Guide</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
 
-      </div>
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Forward Works Planner</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}">Land Information New Zealand</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Listed Land Use Register</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
 
     </div>
 
