added other case studies temp content and separated out other case studies footer into and include file

--- a/case-studies/marlborough-cruise-guide/index.html
+++ b/case-studies/marlborough-cruise-guide/index.html
@@ -1,11 +1,75 @@
 ---
 layout: default
-title: Case Studies | Marlborough District Council
+title: Case Studies | Marlborough Cruise Guide
+casestudyid: 1
 ---
-<div id="main-wrap" class="internal-page">
+<div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Case Study: Marlborough District Council</h1>
+
+    <h1 class="lowercase underline-orange">Case Study: Marlborough Cruise Guide</h1>
+
+    <div class="case-study-intro max-1000">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+    </div>
+
+    <div class="case-study-icons">
+      <div class="case-study-tech">
+        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
+        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
+        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
+        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
+        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+      </div>
+      <div class="case-study-platforms">
+        <i class="icon icon-desktop"></i>
+        <i class="icon icon-mobile"></i>
+      </div>
+    </div>
+
+    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100" />
+    <div class="image-caption max-1000">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+    </div>
+
+    <div class="max-1000 align-left space-below-please">
+      <h2 class="lowercase">The Problem</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="space-below-please">Sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+
+      <h2 class="lowercase">The Solution</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      <h2 class="lowercase">Functionality</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 all-the-space-below" />
+
+      <h2 class="lowercase">Core Features</h2>
+      <p class="space-below-please">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      </p>
+
+      <h2 class="lowercase">Efficiency Gains</h2>
+      <p class="space-below-please">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <h2 class="lowercase">Safety Gains</h2>
+      <p class="all-the-space-below">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+    {% include other-case-studies.html %}
 
   </div> <!-- .max-1200 -->
 
