updated js to allow for init on github based urls

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ menuorder: 1
                 {% include value-wheel.html %}
               </div> <!-- .value-wheel-wrap -->
               <div>
-                <img src="/img/wheel-shadow.png" width="425" class="wheel-shadow">
+                <img src="{{ "/img/wheel-shadow.png" | prepend: site.baseurl }}" width="425" class="wheel-shadow">
               </div>
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
