set up people page mix plugin, added people images and fixed js page detection based on path (changed to dom element detection)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Media Suite | Thoughtful Design, Clever Technology
 menutitle: Home
 menuorder: 1
 ---
-<div id="main-wrap" class="js-one-page-scroll onepage-wrapper">
+<div id="main-wrap" class="home-page js-one-page-scroll onepage-wrapper">
 
   <section id="banner-panel">
     <div id="home-panel-nav">
