--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -4,10 +4,17 @@ title: Media Suite | Who we are
 menutitle: Who we are
 menuorder: 4
 ---
-<div id="main-wrap">
+<div id="main-wrap" class="internal-page people-page">
 
   <div class="panel-inner max-1200 clearfix">
-      <h1>Who we are</h1>
+    <h1 class="lowercase underline-orange">The beautiful young crew</h1>
+
+    <div id="js-mix-container" class="people-container">
+      <div id="person-pete" class="person js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Pete Banks" />
+      </div>
+    </div>
+
   </div>
 
 </div> <!-- #main-wrap -->
