added people markup and starburst animation

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -10,9 +10,151 @@ menuorder: 4
     <h1 class="lowercase underline-orange">The beautiful young crew</h1>
 
     <div id="js-mix-container" class="people-container">
-      <div id="person-pete" class="person js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
-        <img src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Pete Banks" />
-      </div>
+
+      <!-- Abi -->
+      <a href="#" id="person-abi" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Andrew -->
+      <a href="#" id="person-andrew" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Andrew Pitts" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Ed -->
+      <a href="#" id="person-ed" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Ed Robinson" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Ersin -->
+      <a href="#" id="person-ersin" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Ersin Buckley" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- George -->
+      <a href="#" id="person-george" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="George Wills" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Jonathan -->
+      <a href="#" id="person-jonathan" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Jonathan Prince" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Julia -->
+      <a href="#" id="person-julia" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Julia Hide" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Lewis -->
+      <a href="#" id="person-lewis" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Lewis Christie" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Mark -->
+      <a href="#" id="person-mark" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Mark Stufart" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Matt -->
+      <a href="#" id="person-matt" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Matt Lang" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Patrick -->
+      <a href="#" id="person-patrick" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Patrick Walsh" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Pete -->
+      <a href="#" id="person-pete" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Pete Banks" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Richie -->
+      <a href="#" id="person-richie" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Richie Walker" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Sarah -->
+      <a href="#" id="person-sarah" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Sarah Pitts" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Steve -->
+      <a href="#" id="person-steve" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Steve Liew" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
+      <!-- Terri -->
+      <a href="#" id="person-terri" class="person animation-trigger js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+        <img class="person-image" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Terri Winder" />
+        <span class="burst-wrap scale-in">
+          <span class="burst-text fancy-pants-font lowercase">Bio</span>
+          <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+        </span>
+      </a>
+
     </div>
 
   </div>
