--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ menuorder: 1
           <h2 class="lowercase underline-orange">Our Culture</h2>
           <div class="cols-wrap">
             <div class="col third-col" id="culture-col-1">
-              <img class="home-team-img" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" />
+              <a href="who-we-are/"><img class="home-team-img jiggle" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" /></a>
               <h3 class="lowercase text-size-40">We give a shit.</h3>
-              <a href="#" class="drop-btn orange-bg">Get to know the team</a>
+              <a href="who-we-are/" class="drop-btn orange-bg">Get to know the team</a>
             </div>
             <div class="col third-col" id="culture-col-2">
               <h2 class="lowercase text-size-45">Values</h2>
@@ -152,11 +152,11 @@ menuorder: 1
                 <li>Teaching &amp; Learning</li>
                 <li>Communicate well</li>
               </ul>
-              <a href="#" class="drop-btn orange-bg">What we value</a>
+              <!-- <a href="who-we-are/" class="drop-btn orange-bg">What we value</a> -->
             </div>
             <div class="col third-col" id="culture-col-3">
               <h4><img class="curious-minds-text" src="{{ "/img/title-curious-minds-wanted.png" | prepend: site.baseurl }}" alt="Curious minds wanted for curious work" /></h4>
-              <a href="#" class="drop-btn orange-bg">Work here</a>
+              <!-- <a href="#" class="drop-btn orange-bg">Work here</a> -->
             </div>
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
