Added alert jiggle animation

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -13,7 +13,7 @@ menuorder: 2
 
       <div id="csi-cruisy" class="case-study-item clearfix">
         <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
@@ -33,7 +33,7 @@ menuorder: 2
 
       <div id="csi-tfc" class="case-study-item clearfix">
         <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
@@ -53,7 +53,7 @@ menuorder: 2
 
       <div id="csi-forward-works" class="case-study-item clearfix">
         <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-forward-works-planner.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
@@ -72,7 +72,7 @@ menuorder: 2
 
       <div id="csi-appraisal-connector" class="case-study-item clearfix">
         <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-appraisal-connector.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
@@ -91,7 +91,7 @@ menuorder: 2
 
       <div id="csi-tmp" class="case-study-item clearfix">
         <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
@@ -110,7 +110,7 @@ menuorder: 2
 
       <div id="csi-llur" class="case-study-item clearfix">
         <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" />
+          <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
         <div class="item-text">
           <div class="item-text-head">
