added rollover/active state to sort buttons

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -11,9 +11,9 @@ menuorder: 4
     <div class="people-controls">
       <p class="fancy-pants-font lowercase"><strong>Who has the most&hellip;</strong></p>
       <div class="sort-btns">
-        <a href="#" class="sort sort-btn" data-sort="coffees">coffees a day</a>
+        <a href="#" class="sort sort-btn" data-sort="coffees">Coffees a day</a>
         <a href="#" class="sort sort-btn" data-sort="coffees">GitHub commits</a>
-        <a href="#" class="sort sort-btn" data-sort="coffees">cats</a>
+        <a href="#" class="sort sort-btn" data-sort="coffees">Cats</a>
       </div>
     </div>
 
