Changed font size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ menuorder: 1
       </div>
     </div> <!-- #home-panel-nav -->
     <div class="covervid-wrapper">
-      <video class="js-covervid-video" autoplay loop poster="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}">
+      <video class="js-covervid-video" autoplay loop>
         <source src="{{ "/img/looped.mp4" | prepend: site.baseurl }}" type="video/mp4">
       </video>
     </div> <!-- .covervid-wrapper -->
