added loader for people images

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -22,6 +22,7 @@ menuorder: 4
       <!-- Abi -->
       <div id="person-abi" class="person-wrap js-iso-element" data-coffees="1" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -52,6 +53,7 @@ menuorder: 4
       <!-- Andrew -->
       <div id="person-andrew" class="person-wrap js-mix-element" data-coffees="20" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -82,6 +84,7 @@ menuorder: 4
       <!-- Ed -->
       <div id="person-ed" class="person-wrap js-mix-element" data-coffees="19" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -112,6 +115,7 @@ menuorder: 4
       <!-- Ersin -->
       <div id="person-ersin" class="person-wrap js-mix-element" data-coffees="18" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -142,6 +146,7 @@ menuorder: 4
       <!-- George -->
       <div id="person-george" class="person-wrap js-mix-element" data-coffees="17" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -172,6 +177,7 @@ menuorder: 4
       <!-- Jonathan -->
       <div id="person-jonathan" class="person-wrap js-mix-element" data-coffees="16" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -202,6 +208,7 @@ menuorder: 4
       <!-- Julia -->
       <div id="person-julia" class="person-wrap js-mix-element" data-coffees="15" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -232,6 +239,7 @@ menuorder: 4
       <!-- Lewis -->
       <div id="person-lewis" class="person-wrap js-mix-element" data-coffees="14" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -262,6 +270,7 @@ menuorder: 4
       <!-- Mark -->
       <div id="person-mark" class="person-wrap js-mix-element" data-coffees="13" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -292,6 +301,7 @@ menuorder: 4
       <!-- Matt -->
       <div id="person-matt" class="person-wrap js-mix-element" data-coffees="12" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -322,6 +332,7 @@ menuorder: 4
       <!-- Patrick -->
       <div id="person-patrick" class="person-wrap js-mix-element" data-coffees="11" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -352,6 +363,7 @@ menuorder: 4
       <!-- Pete -->
       <div id="person-pete" class="person-wrap js-mix-element" data-coffees="10" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -382,6 +394,7 @@ menuorder: 4
       <!-- Richie -->
       <div id="person-richie" class="person-wrap js-mix-element" data-coffees="9" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -412,6 +425,7 @@ menuorder: 4
       <!-- Sarah -->
       <div id="person-sarah" class="person-wrap js-mix-element" data-coffees="8" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -442,6 +456,7 @@ menuorder: 4
       <!-- Steve -->
       <div id="person-steve" class="person-wrap js-mix-element" data-coffees="7" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
@@ -472,6 +487,7 @@ menuorder: 4
       <!-- Terri -->
       <div id="person-terri" class="person-wrap js-mix-element" data-coffees="6" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
+          <div class="loader icon-spin1"></div>
           <img class="person-image jiggle" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
