fixed broken home link when not viewing site at root of domain

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ menuorder: 1
   <section id="banner-panel">
     <div id="home-panel-nav">
       <div class="max-1200">
-        <a href="/" id="home-nav-logo">
+        <a href="{{ "/" | prepend: site.baseurl }}" id="home-nav-logo">
           <object type="image/svg+xml" data="{{ "/img/logo-trans-white.svg" | prepend: site.baseurl }}" class="home-logo">
             Media Suite Logo <!-- fallback image in CSS -->
           </object>
